appId: "com.recipedia"
---
- runFlow:
    file: "../searchInSettingsList.yaml"
    env:
      SETTINGS_SCREEN: "TagsSettings"
      SEARCH_QUERY: "Italian"
    label: "Search for Italian tag"

- assertVisible:
    id: "TagsSettings::1::TagName"
    text: "Italian"
    label: "Verify Italian tag is displayed"

- tapOn:
    id: "TagsSettings::1::DeleteButton"
    label: "Open Delete dialog for Italian tag"

- runFlow:
    file: "../../../asserts/parameters/tags/en/assertDeleteModalOpen.yaml"
    label: "Verify Delete confirmation modal is displayed"

- tapOn:
    id: "TagsSettings::ItemDialog::DeleteModal::CancelButton"
    label: "Cancel delete operation"

- assertVisible:
    id: "TagsSettings::1::TagName"
    text: "Italian"
    label: "Verify Italian tag is displayed"

- tapOn:
    id: "TagsSettings::SearchBar-clear-icon"
    label: "Clear the search bar"

- extendedWaitUntil:
    visible:
        id: "TagsSettings::5::TagName"
    timeout: 60000
    label: "Wait for list to show all items"
