appId: "com.recipedia"
---

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: "RecipeTag"
    direction: DOWN
    speed: 50
    timeout: 120000
    centerElement: true
    label: "Scroll to find RecipeTag"

- waitForAnimationToEnd

- tapOn:
    id: "TagsSettings::11::DeleteButton"
    label: "Tap Delete button for RecipeTag"

- tapOn:
    id: "TagsSettings::ItemDialog::DeleteModal::ConfirmButton"
    label: "Confirm deleting the tag"
