appId: "com.recipedia"
---
- waitForAnimationToEnd

- runFlow:
    file: "../searchInSettingsList.yaml"
    env:
      SETTINGS_SCREEN: "TagsSettings"
      SEARCH_QUERY: "${TAG_NAME}"
    label: "Action - Search for ${TAG_NAME} ingredient"

- assertVisible:
    id: "TagsSettings::.*::TagName"
    text: "${TAG_NAME}"
    label: "Verify ${TAG_NAME} tag exists in database"

- tapOn:
    id: "TagsSettings::.*::DeleteButton"
    label: "Open delete tag dialog"

- tapOn:
    id: "TagsSettings::ItemDialog::DeleteModal::ConfirmButton"
    label: "Confirm tag deletion"

- assertNotVisible:
    id: "TagsSettings::.*::TagName"
    text: "${TAG_NAME}"
    label: "Verify ${TAG_NAME} tag removed from list"
