appId: "com.recipedia"
---
- tapOn:
    id: "TagsSettings::AppBar::BackButton"
    label: "Navigate back to Parameters"

- waitForAnimationToEnd:
    label: "Wait for animation to end"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "Parameters::Section::Appearance::DarkMode::Switch"
    direction: UP
    speed: 60
    timeout: 30000
    label: "Scroll back to top of Parameters screen"

- waitForAnimationToEnd

- tapOn:
    id: "BottomTabs::Home"
    label: "Return to Home screen"
